<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageButton
        android:id="@+id/ImageButton02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ImageButton01"
        android:layout_alignTop="@+id/imageButton2"
        android:background="@drawable/negativebutton"
        android:contentDescription="@string/negativeIAngular"
        android:src="@drawable/negativebutton" />

    <ImageButton
        android:id="@+id/ImageButton04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ImageButton03"
        android:layout_alignTop="@+id/ImageButton02"
        android:background="@drawable/negativebutton"
        android:contentDescription="negativeDAngular"
        android:src="@drawable/negativebutton" />

    <ImageButton
        android:id="@+id/ImageButton03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/ImageButton01"
        android:layout_marginRight="32dp"
        android:background="@drawable/positivebutton"
        android:contentDescription="@string/positiveDAngular"
        android:src="@drawable/positivebutton" />

    <ImageButton
        android:id="@+id/ImageButton06"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ImageButton02"
        android:layout_alignTop="@+id/ImageButton05"
        android:background="@drawable/positivebutton"
        android:contentDescription="@string/positiveIYaw"
        android:src="@drawable/positivebutton" />

    <ImageButton
        android:id="@+id/ImageButton07"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ImageButton04"
        android:layout_alignTop="@+id/ImageButton06"
        android:background="@drawable/positivebutton"
        android:contentDescription="@string/positiveDYaw"
        android:src="@drawable/positivebutton" />

    <ImageButton
        android:id="@+id/ImageButton09"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ImageButton06"
        android:layout_alignTop="@+id/ImageButton08"
        android:background="@drawable/negativebutton"
        android:contentDescription="@string/negativeIYaw"
        android:src="@drawable/negativebutton" />

    <ImageButton
        android:id="@+id/ImageButton10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ImageButton07"
        android:layout_alignTop="@+id/ImageButton09"
        android:background="@drawable/negativebutton"
        android:contentDescription="@string/negativeDYaw"
        android:src="@drawable/negativebutton" />

    <ImageButton
        android:id="@+id/ImageButton08"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ImageButton05"
        android:layout_below="@+id/ImageButton05"
        android:layout_marginTop="32dp"
        android:background="@drawable/negativebutton"
        android:contentDescription="@string/negativePYaw"
        android:src="@drawable/negativebutton" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageButton1"
        android:layout_below="@+id/imageButton1"
        android:layout_marginTop="33dp"
        android:background="@drawable/negativebutton"
        android:contentDescription="@string/negativePAngular"
        android:src="@drawable/negativebutton" />

    <ImageButton
        android:id="@+id/ImageButton01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageButton2"
        android:layout_centerHorizontal="true"
        android:background="@drawable/positivebutton"
        android:contentDescription="@string/positiveIAngular"
        android:src="@drawable/positivebutton" />

    <ImageButton
        android:id="@+id/ImageButton05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageButton2"
        android:layout_below="@+id/imageButton2"
        android:layout_marginTop="72dp"
        android:background="@drawable/positivebutton"
        android:contentDescription="@string/positivePYaw"
        android:src="@drawable/positivebutton" />

    <TextView
        android:id="@+id/Pletter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ImageButton01"
        android:layout_alignRight="@+id/imageButton1"
        android:layout_marginRight="13dp"
        android:gravity="top|left"
        android:text="@string/Pletter"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="39sp" />

    <TextView
        android:id="@+id/Iletter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ImageButton01"
        android:layout_centerHorizontal="true"
        android:gravity="top|center_vertical"
        android:text="@string/Iletter"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="39sp" />

    <TextView
        android:id="@+id/Dletter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Iletter"
        android:layout_alignBottom="@+id/Iletter"
        android:layout_alignRight="@+id/ImageButton03"
        android:layout_marginRight="16dp"
        android:gravity="top|right"
        android:text="@string/dletter"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="39sp" />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="91dp"
        android:background="@drawable/positivebutton"
        android:contentDescription="@string/positivePAngular"
        android:src="@drawable/positivebutton" />

    <TextView
        android:id="@+id/Angularpids"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Pletter"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/anglularPidsPichandRoll"
        android:gravity="top"
        android:text="@string/anglularPidsPichandRoll1"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/pitchandrollPnumbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ImageButton02"
        android:layout_alignLeft="@+id/imageButton2"
        android:text="@string/pitchandrollPnumbers"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/pitchandrollInumbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ImageButton02"
        android:layout_centerHorizontal="true"
        android:text="@string/pitchandrollInumbers"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/pitchandrollDnumbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ImageButton04"
        android:layout_alignRight="@+id/ImageButton04"
        android:text="@string/pitchandrollDnumbers"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/YawPnumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ImageButton09"
        android:layout_alignLeft="@+id/ImageButton08"
        android:text="0.0000"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/YawInumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ImageButton09"
        android:layout_alignLeft="@+id/pitchandrollInumbers"
        android:text="0.0000"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/YawDnumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ImageButton10"
        android:layout_alignRight="@+id/ImageButton10"
        android:text="0.0000"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/angularpidyaw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ImageButton02"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:contentDescription="@string/angularPidYaw"
        android:text="@string/angularPidYaw"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/YawPnumber" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
        </LinearLayout>
    </ScrollView>

</RelativeLayout>